parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM V M S END
Rule 2     V -> DIM setType Idv AS T Arr V
Rule 3     V -> empty
Rule 4     Arr -> OPENBRACKET EA CLOSINGBRACKET Arr
Rule 5     Arr -> OPENBRACKET ID CLOSINGBRACKET Arr
Rule 6     Arr -> empty
Rule 7     T -> INT
Rule 8     T -> FLOAT
Rule 9     T -> WORD
Rule 10    S -> SUBPROCEDURE ID TWOPOINTS M RETURN S
Rule 11    S -> empty
Rule 12    M -> F M
Rule 13    M -> empty
Rule 14    F -> E F
Rule 15    F -> empty
Rule 16    E -> LET setType Idv EQUALS Ex
Rule 17    E -> DIM setType Idv AS T Arr
Rule 18    E -> IF EL THEN F Esf EIF
Rule 19    E -> FOR ID EQUALS EA TO Ex F NEXT ID
Rule 20    E -> WHILE OPENPAR EL CLOSINGPAR F WEND
Rule 21    E -> GOSUB ID
Rule 22    E -> INPUT ES COMA IDEx
Rule 23    E -> PRINT Ex
Rule 24    Idv -> ID COMA Idv
Rule 25    Idv -> ID
Rule 26    setType -> <empty>
Rule 27    Esf -> ELSE F
Rule 28    Esf -> empty
Rule 29    IDEx -> ID
Rule 30    IDEx -> ID OPENBRACKET setType Idv CLOSINGBRACKET
Rule 31    Ex -> EA
Rule 32    Ex -> ES
Rule 33    Ex -> EL
Rule 34    Ex -> ID
Rule 35    ES -> WORDVAL
Rule 36    EA -> P PLUS EA
Rule 37    EA -> P MINUS EA
Rule 38    EA -> P
Rule 39    P -> N MULTIPLY P
Rule 40    P -> N DIVIDE P
Rule 41    P -> N
Rule 42    N -> cte
Rule 43    N -> ID
Rule 44    N -> OPENPAR EA CLOSINGPAR
Rule 45    N -> ID OPENBRACKET INTVAL CLOSINGBRACKET
Rule 46    N -> ID OPENBRACKET setType Idv CLOSINGBRACKET
Rule 47    cte -> INTVAL
Rule 48    cte -> FLOATVAL
Rule 49    EL -> TRUE
Rule 50    EL -> FALSE
Rule 51    EL -> OPENPAR O CLOSINGPAR Olt
Rule 52    Olt -> OL OPENPAR O CLOSINGPAR Olt
Rule 53    Olt -> empty
Rule 54    OL -> AND
Rule 55    OL -> OR
Rule 56    OL -> NOT
Rule 57    O -> WORD EQUALTO WORD
Rule 58    O -> EA OPR EA
Rule 59    O -> ID OPR ID
Rule 60    O -> ID OPR EA
Rule 61    O -> EA OPR ID
Rule 62    OPR -> EQUALTO
Rule 63    OPR -> GREATHER
Rule 64    OPR -> GREATHEREQUAL
Rule 65    OPR -> SMALLER
Rule 66    OPR -> SMALLEREQUAL
Rule 67    OPR -> NOTEQUAL
Rule 68    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
AS                   : 2 17
CLOSINGBRACKET       : 4 5 30 45 46
CLOSINGPAR           : 20 44 51 52
COMA                 : 22 24
COMMENT              : 
DIM                  : 2 17
DIVIDE               : 40
EIF                  : 18
ELSE                 : 27
END                  : 1
EQUALS               : 16 19
EQUALTO              : 57 62
FALSE                : 50
FLOAT                : 8
FLOATVAL             : 48
FOR                  : 19
GOSUB                : 21
GREATHER             : 63
GREATHEREQUAL        : 64
ID                   : 5 10 19 19 21 24 25 29 30 34 43 45 46 59 59 60 61
IF                   : 18
INPUT                : 22
INT                  : 7
INTVAL               : 45 47
LET                  : 16
MINUS                : 37
MULTIPLY             : 39
NEXT                 : 19
NOT                  : 56
NOTEQUAL             : 67
OPENBRACKET          : 4 5 30 45 46
OPENPAR              : 20 44 51 52
OR                   : 55
PLUS                 : 36
PRINT                : 23
PROGRAM              : 1
RETURN               : 10
SMALLER              : 65
SMALLEREQUAL         : 66
SUBPROCEDURE         : 10
THEN                 : 18
TO                   : 19
TRUE                 : 49
TWOPOINTS            : 10
WEND                 : 20
WHILE                : 20
WORD                 : 9 57 57
WORDVAL              : 35
error                : 

Nonterminals, with rules where they appear

Arr                  : 2 4 5 17
E                    : 14
EA                   : 4 19 31 36 37 44 58 58 60 61
EL                   : 18 20 33
ES                   : 22 32
Esf                  : 18
Ex                   : 16 19 23
F                    : 12 14 18 19 20 27
IDEx                 : 22
Idv                  : 2 16 17 24 30 46
M                    : 1 10 12
N                    : 39 40 41
O                    : 51 52
OL                   : 52
OPR                  : 58 59 60 61
Olt                  : 51 52
P                    : 36 37 38 39 40
PROGRAMA             : 0
S                    : 1 10
T                    : 2 17
V                    : 1 2
cte                  : 42
empty                : 3 6 11 13 15 28 53
setType              : 2 16 17 30 46

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM V M S END

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . V M S END
    (2) V -> . DIM setType Idv AS T Arr V
    (3) V -> . empty
    (68) empty -> .

  ! shift/reduce conflict for DIM resolved as shift
    DIM             shift and go to state 4
    LET             reduce using rule 68 (empty -> .)
    IF              reduce using rule 68 (empty -> .)
    FOR             reduce using rule 68 (empty -> .)
    WHILE           reduce using rule 68 (empty -> .)
    GOSUB           reduce using rule 68 (empty -> .)
    INPUT           reduce using rule 68 (empty -> .)
    PRINT           reduce using rule 68 (empty -> .)
    SUBPROCEDURE    reduce using rule 68 (empty -> .)
    END             reduce using rule 68 (empty -> .)

  ! DIM             [ reduce using rule 68 (empty -> .) ]

    V                              shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) PROGRAMA -> PROGRAM V . M S END
    (12) M -> . F M
    (13) M -> . empty
    (14) F -> . E F
    (15) F -> . empty
    (68) empty -> .
    (16) E -> . LET setType Idv EQUALS Ex
    (17) E -> . DIM setType Idv AS T Arr
    (18) E -> . IF EL THEN F Esf EIF
    (19) E -> . FOR ID EQUALS EA TO Ex F NEXT ID
    (20) E -> . WHILE OPENPAR EL CLOSINGPAR F WEND
    (21) E -> . GOSUB ID
    (22) E -> . INPUT ES COMA IDEx
    (23) E -> . PRINT Ex

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for DIM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    SUBPROCEDURE    reduce using rule 68 (empty -> .)
    END             reduce using rule 68 (empty -> .)
    LET             shift and go to state 10
    DIM             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    GOSUB           shift and go to state 15
    INPUT           shift and go to state 16
    PRINT           shift and go to state 17

  ! LET             [ reduce using rule 68 (empty -> .) ]
  ! DIM             [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! FOR             [ reduce using rule 68 (empty -> .) ]
  ! WHILE           [ reduce using rule 68 (empty -> .) ]
  ! GOSUB           [ reduce using rule 68 (empty -> .) ]
  ! INPUT           [ reduce using rule 68 (empty -> .) ]
  ! PRINT           [ reduce using rule 68 (empty -> .) ]

    M                              shift and go to state 6
    F                              shift and go to state 7
    empty                          shift and go to state 8
    E                              shift and go to state 9

state 4

    (2) V -> DIM . setType Idv AS T Arr V
    (26) setType -> .

    ID              reduce using rule 26 (setType -> .)

    setType                        shift and go to state 18

state 5

    (3) V -> empty .

    LET             reduce using rule 3 (V -> empty .)
    DIM             reduce using rule 3 (V -> empty .)
    IF              reduce using rule 3 (V -> empty .)
    FOR             reduce using rule 3 (V -> empty .)
    WHILE           reduce using rule 3 (V -> empty .)
    GOSUB           reduce using rule 3 (V -> empty .)
    INPUT           reduce using rule 3 (V -> empty .)
    PRINT           reduce using rule 3 (V -> empty .)
    SUBPROCEDURE    reduce using rule 3 (V -> empty .)
    END             reduce using rule 3 (V -> empty .)


state 6

    (1) PROGRAMA -> PROGRAM V M . S END
    (10) S -> . SUBPROCEDURE ID TWOPOINTS M RETURN S
    (11) S -> . empty
    (68) empty -> .

    SUBPROCEDURE    shift and go to state 20
    END             reduce using rule 68 (empty -> .)

    S                              shift and go to state 19
    empty                          shift and go to state 21

state 7

    (12) M -> F . M
    (12) M -> . F M
    (13) M -> . empty
    (14) F -> . E F
    (15) F -> . empty
    (68) empty -> .
    (16) E -> . LET setType Idv EQUALS Ex
    (17) E -> . DIM setType Idv AS T Arr
    (18) E -> . IF EL THEN F Esf EIF
    (19) E -> . FOR ID EQUALS EA TO Ex F NEXT ID
    (20) E -> . WHILE OPENPAR EL CLOSINGPAR F WEND
    (21) E -> . GOSUB ID
    (22) E -> . INPUT ES COMA IDEx
    (23) E -> . PRINT Ex

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for DIM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    SUBPROCEDURE    reduce using rule 68 (empty -> .)
    END             reduce using rule 68 (empty -> .)
    RETURN          reduce using rule 68 (empty -> .)
    LET             shift and go to state 10
    DIM             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    GOSUB           shift and go to state 15
    INPUT           shift and go to state 16
    PRINT           shift and go to state 17

  ! LET             [ reduce using rule 68 (empty -> .) ]
  ! DIM             [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! FOR             [ reduce using rule 68 (empty -> .) ]
  ! WHILE           [ reduce using rule 68 (empty -> .) ]
  ! GOSUB           [ reduce using rule 68 (empty -> .) ]
  ! INPUT           [ reduce using rule 68 (empty -> .) ]
  ! PRINT           [ reduce using rule 68 (empty -> .) ]

    F                              shift and go to state 7
    M                              shift and go to state 22
    empty                          shift and go to state 8
    E                              shift and go to state 9

state 8

    (13) M -> empty .
    (15) F -> empty .

  ! reduce/reduce conflict for SUBPROCEDURE resolved using rule 13 (M -> empty .)
  ! reduce/reduce conflict for END resolved using rule 13 (M -> empty .)
  ! reduce/reduce conflict for RETURN resolved using rule 13 (M -> empty .)
    SUBPROCEDURE    reduce using rule 13 (M -> empty .)
    END             reduce using rule 13 (M -> empty .)
    RETURN          reduce using rule 13 (M -> empty .)
    LET             reduce using rule 15 (F -> empty .)
    DIM             reduce using rule 15 (F -> empty .)
    IF              reduce using rule 15 (F -> empty .)
    FOR             reduce using rule 15 (F -> empty .)
    WHILE           reduce using rule 15 (F -> empty .)
    GOSUB           reduce using rule 15 (F -> empty .)
    INPUT           reduce using rule 15 (F -> empty .)
    PRINT           reduce using rule 15 (F -> empty .)

  ! SUBPROCEDURE    [ reduce using rule 15 (F -> empty .) ]
  ! END             [ reduce using rule 15 (F -> empty .) ]
  ! RETURN          [ reduce using rule 15 (F -> empty .) ]


state 9

    (14) F -> E . F
    (14) F -> . E F
    (15) F -> . empty
    (16) E -> . LET setType Idv EQUALS Ex
    (17) E -> . DIM setType Idv AS T Arr
    (18) E -> . IF EL THEN F Esf EIF
    (19) E -> . FOR ID EQUALS EA TO Ex F NEXT ID
    (20) E -> . WHILE OPENPAR EL CLOSINGPAR F WEND
    (21) E -> . GOSUB ID
    (22) E -> . INPUT ES COMA IDEx
    (23) E -> . PRINT Ex
    (68) empty -> .

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for DIM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    LET             shift and go to state 10
    DIM             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    GOSUB           shift and go to state 15
    INPUT           shift and go to state 16
    PRINT           shift and go to state 17
    SUBPROCEDURE    reduce using rule 68 (empty -> .)
    END             reduce using rule 68 (empty -> .)
    RETURN          reduce using rule 68 (empty -> .)
    ELSE            reduce using rule 68 (empty -> .)
    EIF             reduce using rule 68 (empty -> .)
    WEND            reduce using rule 68 (empty -> .)
    NEXT            reduce using rule 68 (empty -> .)

  ! LET             [ reduce using rule 68 (empty -> .) ]
  ! DIM             [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! FOR             [ reduce using rule 68 (empty -> .) ]
  ! WHILE           [ reduce using rule 68 (empty -> .) ]
  ! GOSUB           [ reduce using rule 68 (empty -> .) ]
  ! INPUT           [ reduce using rule 68 (empty -> .) ]
  ! PRINT           [ reduce using rule 68 (empty -> .) ]

    E                              shift and go to state 9
    F                              shift and go to state 23
    empty                          shift and go to state 24

state 10

    (16) E -> LET . setType Idv EQUALS Ex
    (26) setType -> .

    ID              reduce using rule 26 (setType -> .)

    setType                        shift and go to state 25

state 11

    (17) E -> DIM . setType Idv AS T Arr
    (26) setType -> .

    ID              reduce using rule 26 (setType -> .)

    setType                        shift and go to state 26

state 12

    (18) E -> IF . EL THEN F Esf EIF
    (49) EL -> . TRUE
    (50) EL -> . FALSE
    (51) EL -> . OPENPAR O CLOSINGPAR Olt

    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    OPENPAR         shift and go to state 30

    EL                             shift and go to state 27

state 13

    (19) E -> FOR . ID EQUALS EA TO Ex F NEXT ID

    ID              shift and go to state 31


state 14

    (20) E -> WHILE . OPENPAR EL CLOSINGPAR F WEND

    OPENPAR         shift and go to state 32


state 15

    (21) E -> GOSUB . ID

    ID              shift and go to state 33


state 16

    (22) E -> INPUT . ES COMA IDEx
    (35) ES -> . WORDVAL

    WORDVAL         shift and go to state 35

    ES                             shift and go to state 34

state 17

    (23) E -> PRINT . Ex
    (31) Ex -> . EA
    (32) Ex -> . ES
    (33) Ex -> . EL
    (34) Ex -> . ID
    (36) EA -> . P PLUS EA
    (37) EA -> . P MINUS EA
    (38) EA -> . P
    (35) ES -> . WORDVAL
    (49) EL -> . TRUE
    (50) EL -> . FALSE
    (51) EL -> . OPENPAR O CLOSINGPAR Olt
    (39) P -> . N MULTIPLY P
    (40) P -> . N DIVIDE P
    (41) P -> . N
    (42) N -> . cte
    (43) N -> . ID
    (44) N -> . OPENPAR EA CLOSINGPAR
    (45) N -> . ID OPENBRACKET INTVAL CLOSINGBRACKET
    (46) N -> . ID OPENBRACKET setType Idv CLOSINGBRACKET
    (47) cte -> . INTVAL
    (48) cte -> . FLOATVAL

    ID              shift and go to state 40
    WORDVAL         shift and go to state 35
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    OPENPAR         shift and go to state 42
    INTVAL          shift and go to state 45
    FLOATVAL        shift and go to state 46

    Ex                             shift and go to state 36
    EA                             shift and go to state 37
    ES                             shift and go to state 38
    EL                             shift and go to state 39
    P                              shift and go to state 41
    N                              shift and go to state 43
    cte                            shift and go to state 44

state 18

    (2) V -> DIM setType . Idv AS T Arr V
    (24) Idv -> . ID COMA Idv
    (25) Idv -> . ID

    ID              shift and go to state 48

    Idv                            shift and go to state 47

state 19

    (1) PROGRAMA -> PROGRAM V M S . END

    END             shift and go to state 49


state 20

    (10) S -> SUBPROCEDURE . ID TWOPOINTS M RETURN S

    ID              shift and go to state 50


state 21

    (11) S -> empty .

    END             reduce using rule 11 (S -> empty .)


state 22

    (12) M -> F M .

    SUBPROCEDURE    reduce using rule 12 (M -> F M .)
    END             reduce using rule 12 (M -> F M .)
    RETURN          reduce using rule 12 (M -> F M .)


state 23

    (14) F -> E F .

    LET             reduce using rule 14 (F -> E F .)
    DIM             reduce using rule 14 (F -> E F .)
    IF              reduce using rule 14 (F -> E F .)
    FOR             reduce using rule 14 (F -> E F .)
    WHILE           reduce using rule 14 (F -> E F .)
    GOSUB           reduce using rule 14 (F -> E F .)
    INPUT           reduce using rule 14 (F -> E F .)
    PRINT           reduce using rule 14 (F -> E F .)
    SUBPROCEDURE    reduce using rule 14 (F -> E F .)
    END             reduce using rule 14 (F -> E F .)
    RETURN          reduce using rule 14 (F -> E F .)
    ELSE            reduce using rule 14 (F -> E F .)
    EIF             reduce using rule 14 (F -> E F .)
    WEND            reduce using rule 14 (F -> E F .)
    NEXT            reduce using rule 14 (F -> E F .)


state 24

    (15) F -> empty .

    LET             reduce using rule 15 (F -> empty .)
    DIM             reduce using rule 15 (F -> empty .)
    IF              reduce using rule 15 (F -> empty .)
    FOR             reduce using rule 15 (F -> empty .)
    WHILE           reduce using rule 15 (F -> empty .)
    GOSUB           reduce using rule 15 (F -> empty .)
    INPUT           reduce using rule 15 (F -> empty .)
    PRINT           reduce using rule 15 (F -> empty .)
    SUBPROCEDURE    reduce using rule 15 (F -> empty .)
    END             reduce using rule 15 (F -> empty .)
    RETURN          reduce using rule 15 (F -> empty .)
    ELSE            reduce using rule 15 (F -> empty .)
    EIF             reduce using rule 15 (F -> empty .)
    WEND            reduce using rule 15 (F -> empty .)
    NEXT            reduce using rule 15 (F -> empty .)


state 25

    (16) E -> LET setType . Idv EQUALS Ex
    (24) Idv -> . ID COMA Idv
    (25) Idv -> . ID

    ID              shift and go to state 48

    Idv                            shift and go to state 51

state 26

    (17) E -> DIM setType . Idv AS T Arr
    (24) Idv -> . ID COMA Idv
    (25) Idv -> . ID

    ID              shift and go to state 48

    Idv                            shift and go to state 52

state 27

    (18) E -> IF EL . THEN F Esf EIF

    THEN            shift and go to state 53


state 28

    (49) EL -> TRUE .

    THEN            reduce using rule 49 (EL -> TRUE .)
    LET             reduce using rule 49 (EL -> TRUE .)
    DIM             reduce using rule 49 (EL -> TRUE .)
    IF              reduce using rule 49 (EL -> TRUE .)
    FOR             reduce using rule 49 (EL -> TRUE .)
    WHILE           reduce using rule 49 (EL -> TRUE .)
    GOSUB           reduce using rule 49 (EL -> TRUE .)
    INPUT           reduce using rule 49 (EL -> TRUE .)
    PRINT           reduce using rule 49 (EL -> TRUE .)
    SUBPROCEDURE    reduce using rule 49 (EL -> TRUE .)
    END             reduce using rule 49 (EL -> TRUE .)
    RETURN          reduce using rule 49 (EL -> TRUE .)
    ELSE            reduce using rule 49 (EL -> TRUE .)
    EIF             reduce using rule 49 (EL -> TRUE .)
    WEND            reduce using rule 49 (EL -> TRUE .)
    NEXT            reduce using rule 49 (EL -> TRUE .)
    CLOSINGPAR      reduce using rule 49 (EL -> TRUE .)


state 29

    (50) EL -> FALSE .

    THEN            reduce using rule 50 (EL -> FALSE .)
    LET             reduce using rule 50 (EL -> FALSE .)
    DIM             reduce using rule 50 (EL -> FALSE .)
    IF              reduce using rule 50 (EL -> FALSE .)
    FOR             reduce using rule 50 (EL -> FALSE .)
    WHILE           reduce using rule 50 (EL -> FALSE .)
    GOSUB           reduce using rule 50 (EL -> FALSE .)
    INPUT           reduce using rule 50 (EL -> FALSE .)
    PRINT           reduce using rule 50 (EL -> FALSE .)
    SUBPROCEDURE    reduce using rule 50 (EL -> FALSE .)
    END             reduce using rule 50 (EL -> FALSE .)
    RETURN          reduce using rule 50 (EL -> FALSE .)
    ELSE            reduce using rule 50 (EL -> FALSE .)
    EIF             reduce using rule 50 (EL -> FALSE .)
    WEND            reduce using rule 50 (EL -> FALSE .)
    NEXT            reduce using rule 50 (EL -> FALSE .)
    CLOSINGPAR      reduce using rule 50 (EL -> FALSE .)


state 30

    (51) EL -> OPENPAR . O CLOSINGPAR Olt
    (57) O -> . WORD EQUALTO WORD
    (58) O -> . EA OPR EA
    (59) O -> . ID OPR ID
    (60) O -> . ID OPR EA
    (61) O -> . EA OPR ID
    (36) EA -> . P PLUS EA
    (37) EA -> . P MINUS EA
    (38) EA -> . P
    (39) P -> . N MULTIPLY P
    (40) P -> . N DIVIDE P
    (41) P -> . N
    (42) N -> . cte
    (43) N -> . ID
    (44) N -> . OPENPAR EA CLOSINGPAR
    (45) N -> . ID OPENBRACKET INTVAL CLOSINGBRACKET
    (46) N -> . ID OPENBRACKET setType Idv CLOSINGBRACKET
    (47) cte -> . INTVAL
    (48) cte -> . FLOATVAL

    WORD            shift and go to state 56
    ID              shift and go to state 58
    OPENPAR         shift and go to state 54
    INTVAL          shift and go to state 45
    FLOATVAL        shift and go to state 46

    O                              shift and go to state 55
    EA                             shift and go to state 57
    P                              shift and go to state 41
    N                              shift and go to state 43
    cte                            shift and go to state 44

state 31

    (19) E -> FOR ID . EQUALS EA TO Ex F NEXT ID

    EQUALS          shift and go to state 59


state 32

    (20) E -> WHILE OPENPAR . EL CLOSINGPAR F WEND
    (49) EL -> . TRUE
    (50) EL -> . FALSE
    (51) EL -> . OPENPAR O CLOSINGPAR Olt

    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    OPENPAR         shift and go to state 30

    EL                             shift and go to state 60

state 33

    (21) E -> GOSUB ID .

    LET             reduce using rule 21 (E -> GOSUB ID .)
    DIM             reduce using rule 21 (E -> GOSUB ID .)
    IF              reduce using rule 21 (E -> GOSUB ID .)
    FOR             reduce using rule 21 (E -> GOSUB ID .)
    WHILE           reduce using rule 21 (E -> GOSUB ID .)
    GOSUB           reduce using rule 21 (E -> GOSUB ID .)
    INPUT           reduce using rule 21 (E -> GOSUB ID .)
    PRINT           reduce using rule 21 (E -> GOSUB ID .)
    SUBPROCEDURE    reduce using rule 21 (E -> GOSUB ID .)
    END             reduce using rule 21 (E -> GOSUB ID .)
    RETURN          reduce using rule 21 (E -> GOSUB ID .)
    ELSE            reduce using rule 21 (E -> GOSUB ID .)
    EIF             reduce using rule 21 (E -> GOSUB ID .)
    WEND            reduce using rule 21 (E -> GOSUB ID .)
    NEXT            reduce using rule 21 (E -> GOSUB ID .)


state 34

    (22) E -> INPUT ES . COMA IDEx

    COMA            shift and go to state 61


state 35

    (35) ES -> WORDVAL .

    COMA            reduce using rule 35 (ES -> WORDVAL .)
    LET             reduce using rule 35 (ES -> WORDVAL .)
    DIM             reduce using rule 35 (ES -> WORDVAL .)
    IF              reduce using rule 35 (ES -> WORDVAL .)
    FOR             reduce using rule 35 (ES -> WORDVAL .)
    WHILE           reduce using rule 35 (ES -> WORDVAL .)
    GOSUB           reduce using rule 35 (ES -> WORDVAL .)
    INPUT           reduce using rule 35 (ES -> WORDVAL .)
    PRINT           reduce using rule 35 (ES -> WORDVAL .)
    SUBPROCEDURE    reduce using rule 35 (ES -> WORDVAL .)
    END             reduce using rule 35 (ES -> WORDVAL .)
    RETURN          reduce using rule 35 (ES -> WORDVAL .)
    ELSE            reduce using rule 35 (ES -> WORDVAL .)
    EIF             reduce using rule 35 (ES -> WORDVAL .)
    WEND            reduce using rule 35 (ES -> WORDVAL .)
    NEXT            reduce using rule 35 (ES -> WORDVAL .)


state 36

    (23) E -> PRINT Ex .

    LET             reduce using rule 23 (E -> PRINT Ex .)
    DIM             reduce using rule 23 (E -> PRINT Ex .)
    IF              reduce using rule 23 (E -> PRINT Ex .)
    FOR             reduce using rule 23 (E -> PRINT Ex .)
    WHILE           reduce using rule 23 (E -> PRINT Ex .)
    GOSUB           reduce using rule 23 (E -> PRINT Ex .)
    INPUT           reduce using rule 23 (E -> PRINT Ex .)
    PRINT           reduce using rule 23 (E -> PRINT Ex .)
    SUBPROCEDURE    reduce using rule 23 (E -> PRINT Ex .)
    END             reduce using rule 23 (E -> PRINT Ex .)
    RETURN          reduce using rule 23 (E -> PRINT Ex .)
    ELSE            reduce using rule 23 (E -> PRINT Ex .)
    EIF             reduce using rule 23 (E -> PRINT Ex .)
    WEND            reduce using rule 23 (E -> PRINT Ex .)
    NEXT            reduce using rule 23 (E -> PRINT Ex .)


state 37

    (31) Ex -> EA .

    LET             reduce using rule 31 (Ex -> EA .)
    DIM             reduce using rule 31 (Ex -> EA .)
    IF              reduce using rule 31 (Ex -> EA .)
    FOR             reduce using rule 31 (Ex -> EA .)
    WHILE           reduce using rule 31 (Ex -> EA .)
    GOSUB           reduce using rule 31 (Ex -> EA .)
    INPUT           reduce using rule 31 (Ex -> EA .)
    PRINT           reduce using rule 31 (Ex -> EA .)
    SUBPROCEDURE    reduce using rule 31 (Ex -> EA .)
    END             reduce using rule 31 (Ex -> EA .)
    RETURN          reduce using rule 31 (Ex -> EA .)
    ELSE            reduce using rule 31 (Ex -> EA .)
    EIF             reduce using rule 31 (Ex -> EA .)
    WEND            reduce using rule 31 (Ex -> EA .)
    NEXT            reduce using rule 31 (Ex -> EA .)


state 38

    (32) Ex -> ES .

    LET             reduce using rule 32 (Ex -> ES .)
    DIM             reduce using rule 32 (Ex -> ES .)
    IF              reduce using rule 32 (Ex -> ES .)
    FOR             reduce using rule 32 (Ex -> ES .)
    WHILE           reduce using rule 32 (Ex -> ES .)
    GOSUB           reduce using rule 32 (Ex -> ES .)
    INPUT           reduce using rule 32 (Ex -> ES .)
    PRINT           reduce using rule 32 (Ex -> ES .)
    SUBPROCEDURE    reduce using rule 32 (Ex -> ES .)
    END             reduce using rule 32 (Ex -> ES .)
    RETURN          reduce using rule 32 (Ex -> ES .)
    ELSE            reduce using rule 32 (Ex -> ES .)
    EIF             reduce using rule 32 (Ex -> ES .)
    WEND            reduce using rule 32 (Ex -> ES .)
    NEXT            reduce using rule 32 (Ex -> ES .)


state 39

    (33) Ex -> EL .

    LET             reduce using rule 33 (Ex -> EL .)
    DIM             reduce using rule 33 (Ex -> EL .)
    IF              reduce using rule 33 (Ex -> EL .)
    FOR             reduce using rule 33 (Ex -> EL .)
    WHILE           reduce using rule 33 (Ex -> EL .)
    GOSUB           reduce using rule 33 (Ex -> EL .)
    INPUT           reduce using rule 33 (Ex -> EL .)
    PRINT           reduce using rule 33 (Ex -> EL .)
    SUBPROCEDURE    reduce using rule 33 (Ex -> EL .)
    END             reduce using rule 33 (Ex -> EL .)
    RETURN          reduce using rule 33 (Ex -> EL .)
    ELSE            reduce using rule 33 (Ex -> EL .)
    EIF             reduce using rule 33 (Ex -> EL .)
    WEND            reduce using rule 33 (Ex -> EL .)
    NEXT            reduce using rule 33 (Ex -> EL .)


state 40

    (34) Ex -> ID .
    (43) N -> ID .
    (45) N -> ID . OPENBRACKET INTVAL CLOSINGBRACKET
    (46) N -> ID . OPENBRACKET setType Idv CLOSINGBRACKET

  ! reduce/reduce conflict for LET resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for DIM resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for IF resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for FOR resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for WHILE resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for GOSUB resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for INPUT resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for PRINT resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for SUBPROCEDURE resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for END resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for RETURN resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for ELSE resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for EIF resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for WEND resolved using rule 34 (Ex -> ID .)
  ! reduce/reduce conflict for NEXT resolved using rule 34 (Ex -> ID .)
    LET             reduce using rule 34 (Ex -> ID .)
    DIM             reduce using rule 34 (Ex -> ID .)
    IF              reduce using rule 34 (Ex -> ID .)
    FOR             reduce using rule 34 (Ex -> ID .)
    WHILE           reduce using rule 34 (Ex -> ID .)
    GOSUB           reduce using rule 34 (Ex -> ID .)
    INPUT           reduce using rule 34 (Ex -> ID .)
    PRINT           reduce using rule 34 (Ex -> ID .)
    SUBPROCEDURE    reduce using rule 34 (Ex -> ID .)
    END             reduce using rule 34 (Ex -> ID .)
    RETURN          reduce using rule 34 (Ex -> ID .)
    ELSE            reduce using rule 34 (Ex -> ID .)
    EIF             reduce using rule 34 (Ex -> ID .)
    WEND            reduce using rule 34 (Ex -> ID .)
    NEXT            reduce using rule 34 (Ex -> ID .)
    MULTIPLY        reduce using rule 43 (N -> ID .)
    DIVIDE          reduce using rule 43 (N -> ID .)
    PLUS            reduce using rule 43 (N -> ID .)
    MINUS           reduce using rule 43 (N -> ID .)
    OPENBRACKET     shift and go to state 62
